--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -40,7 +40,7 @@
 {\raise-0.05em\hbox{\Large $#1$}}{\hbox{\large $#1$}}{#1}}}
 \newcommand{\bigtimes}{\BIGOP{\times}}
 \vspace{-0.5cm}
-\title{Natural Language Processing \\ Large Languade Models Usage Patterns}
+\title{Natural Language Processing \\ Large Language Models Usage and Evaluation Patterns}
 \vspace{-0.5cm}
 \author[Felipe Bravo Márquez]{\footnotesize
 %\author{\footnotesize  
@@ -63,7 +63,7 @@
 \begin{frame}{Introduction}
 \begin{scriptsize}
 \begin{itemize}
-\item Since the inception of Large Language Models, various patterns of use of this technology have emerged.
+\item Since the inception of Large Language Models, various patterns of use and evaluation of this technology have emerged.
 \item In this talk, we will try to organize these patterns and give a general overview of them.
 \end{itemize}
 
@@ -87,17 +87,40 @@ Source: \url{https://www.masayume.it/img/masayume/Large-Language-Models.jpg}
 \end{scriptsize}
 \end{frame}
 
-\begin{frame}{LLMs Usage Patterns}
+
+\begin{frame}{Talk Overview}
 \begin{scriptsize}
-\begin{itemize}
-\item Prompting
-\item Vector Databases
-\item Fine-Tuning
-\item Evaluation
+
+\begin{columns}[t]
+\column{0.5\textwidth}
+\begin{block}{Usage Patterns}
+\begin{enumerate}
+\item Fixed-knowledge Assistant
+\item knowledge-augmented Assistant
+\item Applications with LLMs in the middle
 \item Agents
+\end{enumerate}
+\end{block}
+
+\column{0.5\textwidth}
+\begin{block}{Evaluation Patterns}
+\begin{itemize}
+\item MTBench
+\item LLM Arena
 \end{itemize}
+\end{block}
+
+\end{columns}
+
 \end{scriptsize}
 \end{frame}
+
+
+
+
+
+
+
 
 
 % \url{https://ai.meta.com/llama/get-started/?trk=feed_main-feed-card_reshare_feed-article-content}.
