--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -129,7 +129,7 @@ Source: \url{https://www.masayume.it/img/masayume/Large-Language-Models.jpg}
 \begin{frame}[fragile]{Prompting}
 \begin{scriptsize}
 \begin{itemize}
-\item Prompt Engineering 
+\item Prompt Engineering : https://twitter.com/IntuitMachine/status/1727079666001870877
 \item Roles
 \item JSON outputs
 \begin{verbatim}
