--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -58,6 +58,11 @@
 \end{frame}
 
 
+% Large Language Models (LLMs) have changed the way computers understand and use human language. They're used in many different areas, and in this talk we'll look at how people use and evaluate them. We'll start by looking at the different ways people use LLMs. First, when they are used as general assistants for tasks like writing, summarizing, coding, etc. Then, when they are adapted to address more domain-specific tasks using two approaches: 1) retrieval-assisted generation, and 2) fine-tuning. We'll also see how LLMs are integrated into software applications, such as when they are invoked by computer code (API calls) or used by autonomous agents to make decisions on their own. On the evaluation side, we'll talk about a method called MTBench, a multi-turn question set, and Chatbot Arena, a crowdsourced battle platform between LLMs.
+
+
+
+
 
 \section{Introduction}
 \begin{frame}{Introduction}
