--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -248,7 +248,7 @@ Prompt engineering, often referred to as ``Prompting,'' is the discipline or ``a
 \end{frame}
 
 
-\begin{frame}{Retrieval-Augmented Generation}
+\begin{frame}{Usage Pattern 2.1: Retrieval-Augmented Generation}
 \begin{scriptsize}
 Idea: Incorporate domain-specific knowledge into the query using information retrieval and document embeddings (i.e., densely encoded vectors that capture the semantic information of the document). \cite{lewis2021retrievalaugmented}.
 
@@ -271,7 +271,7 @@ Idea: Incorporate domain-specific knowledge into the query using information ret
  \item There are also many vector databases available, a popular one is \textbf{weaviate}.
   \end{itemize}
  \item Encode the prompt with the same vectorizer used to encode documents.
- \item Use prompt embedding and the vecto database to retrieve relevant documents based on similarity.
+ \item Use prompt embedding and the vector database to retrieve relevant documents based on similarity.
  \item Create a refined prompt that includes a domain-specific role, the user prompt, and the retrieved documents as contexts.
  \item Send the refined prompt to the LLM and return the response to the user.
 \end{enumerate}
@@ -289,7 +289,7 @@ Idea: Incorporate domain-specific knowledge into the query using information ret
 %\item \url{https://stackoverflow.blog/2023/10/09/from-prototype-to-production-vector-databases-in-generative-ai-applications/}
 
 
-\begin{frame}{Fine-Tuning}
+\begin{frame}{Usage Pattern 2.2: Fine-Tuning}
 \begin{scriptsize}
 Idea: Incorporate domain-specific knowledge by fine-tuning a pre-trained LLM with the next-token prediction task over a domain-specific corpus and interact with the resulting LLM. 
 
